style(badge): Fix dropdown badge count alignment

--- a/src/styles/components/badges/styles.less
+++ b/src/styles/components/badges/styles.less
@@ -3,6 +3,7 @@
   .badge-container {
     align-items: baseline;
     display: flex;
+    flex-grow: 1;
 
     .badge-container-text {
       flex: 1 1 auto;
